Fixed security permissions to create profiles