@@ -3,46 +3,50 @@ package com.insane.eyewalk.api.user;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
-
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 
-import static com.insane.eyewalk.api.user.Permission.ADMIN_CREATE;
-import static com.insane.eyewalk.api.user.Permission.ADMIN_DELETE;
-import static com.insane.eyewalk.api.user.Permission.ADMIN_READ;
-import static com.insane.eyewalk.api.user.Permission.ADMIN_UPDATE;
-import static com.insane.eyewalk.api.user.Permission.MANAGER_CREATE;
-import static com.insane.eyewalk.api.user.Permission.MANAGER_DELETE;
-import static com.insane.eyewalk.api.user.Permission.MANAGER_READ;
-import static com.insane.eyewalk.api.user.Permission.MANAGER_UPDATE;
+import static com.insane.eyewalk.api.user.Permission.*;
 
 @RequiredArgsConstructor
 public enum Role {
 
-    USER(Collections.emptySet()),
+    USER(
+            Set.of(
+                    USER_READ,
+                    USER_UPDATE,
+                    USER_DELETE
+            )
+    ),
+    EDITOR(
+            Set.of(
+                    EDITOR_READ,
+                    EDITOR_UPDATE,
+                    EDITOR_DELETE,
+                    EDITOR_CREATE,
+                    USER_READ,
+                    USER_UPDATE,
+                    USER_DELETE,
+                    USER_CREATE
+            )
+    ),
     ADMIN(
             Set.of(
                     ADMIN_READ,
                     ADMIN_UPDATE,
                     ADMIN_DELETE,
                     ADMIN_CREATE,
-                    MANAGER_READ,
-                    MANAGER_UPDATE,
-                    MANAGER_DELETE,
-                    MANAGER_CREATE
-            )
-    ),
-    MANAGER(
-            Set.of(
-                    MANAGER_READ,
-                    MANAGER_UPDATE,
-                    MANAGER_DELETE,
-                    MANAGER_CREATE
+                    EDITOR_READ,
+                    EDITOR_UPDATE,
+                    EDITOR_DELETE,
+                    EDITOR_CREATE,
+                    USER_READ,
+                    USER_UPDATE,
+                    USER_DELETE,
+                    USER_CREATE
             )
     )
-
     ;
 
     @Getter
@@ -56,4 +60,5 @@ public enum Role {
         authorities.add(new SimpleGrantedAuthority("ROLE_" + this.name()));
         return authorities;
     }
+
 }
